# MoneyTrackerBot

./: Cargo.toml  users_data.json
.cargo/: config.toml
.github/workflows/: deploy-main.yml
src/: add_category.rs  add_expenses.rs  bot_structure.rs  cleanup_expenses.rs  delete_category.rs  dialogue_bot.rs  main.rs  show_expenses.rs
