[package]
name = "rust-money-tracker-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
log = "0.4"
env_logger = "0.10"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
url = "2.2"
dotenv = "0.15"
chrono = "0.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_with = { version = "3.8.1", features = ["chrono_0_4"] }
serde_json = "1.0.140"
